--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     --lightYellow: #FFF7EB;
     --goldYellow: #FFECCF;
     --whiteColor: #ebeff8;
+    --boxShadow: 0px 5px #456782;
 }
 
 body {
@@ -97,20 +98,47 @@ content {
     height: 550px;
 }
 
-.mainWeatherContainer p {
-    text-align: center;
-    padding: 15%;
-}
-
 .selectedWeatherContainer {
     width: 62%;
     background-color: var(--darkBlue);
     margin-right: 3%;
     border-radius: 30px;
+    box-shadow: var(--boxShadow);
+    display: flex;
+    flex-direction: column;
 }
 
 .selectedWeatherContainer p {
-    z-index: 1;
+    color: var(--whiteColor);
+}
+
+.selectedWeatherContainer img {
+    margin: 0% 35%;
+}
+
+.currentTemp {
+    display: flex;
+    justify-content: center;
+    font-size: 70px;
+}
+
+.currentCity,
+.currentDate {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.currentCity {
+    margin: 1% 0%;
+}
+
+.currentDate {
+    margin: 9% 0%;
+}
+
+.weatherDetails {
+    text-align: center;
 }
 
 .futureWeatherContainer {
@@ -125,11 +153,27 @@ content {
     border-radius: 20px;
     height: 18%;
     padding: 1%;
+    display: flex;
+    justify-content: space-evenly;
+    box-shadow: var(--boxShadow);
 }
 
 .futureWeatherContainer p {
     text-align: center;
     padding: 0px;
+    color: var(--whiteColor);
+    display: flex;
+    align-items: center;
+}
+
+.temp {
+    width: 120px;
+    font-size: 25px;
+}
+
+.date {
+    justify-content: center;
+    font-size: 20px;
 }
 
 .highLowContainer {
@@ -139,6 +183,7 @@ content {
     margin: 0% 20%;
     display: flex;
     justify-content: center;
+    box-shadow: var(--boxShadow);
 }
 
 /* FOOTER STYLING */
